backend/propuestaGramatica.txt
init : instrucciones_globales

instrucciones_globales : instruccion 
                       | instrucciones_globales instruccion
                       | instrucciones_globales funcion
                       | funcion

instruccion : print
            | ciclo_for
            | ciclo_while
            | condicional_if
            | struct
            | llamar_funcion
            | declaracion
            | asignacion
            | continuar
            | romper
            | retorno

instrucciones : instrucciones instruccion
              | instruccion

print : CONSOLE DOT ID LPAR exprecion RPAR SEMICOLON

continuar : CONTINUE SEMICOLON

romper : BREAK SEMICOLON

retorno : RETURN SEMICOLON
        | RETURN exprecion SEMICOLON

ciclo_for : FOR LPAR declaracion SEMICOLON exprecion SEMICOLON sumador RPAR LKEY RKEY
          | FOR LPAR declaracion SEMICOLON exprecion SEMICOLON sumador RPAR LKEY instrucciones RKEY
          | FOR LPAR LET ID OF exprecion RPAR LKEY RKEY
          | FOR LPAR LET ID OF exprecion RPAR LKEY instrucciones RKEY

sumador : ID SUM
        | ID RES

condicional_if : IF LPAR exprecion RPAR LKEY RKEY
               | IF LPAR exprecion RPAR LKEY instrucciones RKEY
               | IF LPAR exprecion RPAR LKEY instrucciones RKEY continuacion_if
               | IF LPAR exprecion RPAR LKEY RKEY continuacion_if

continuacion_if : ELSE LKEY RKEY
                | ELSE LKEY instrucciones RKEY
                | ELSE IF LPAR exprecion RPAR LKEY instrucciones RKEY
                | ELSE IF LPAR exprecion RPAR LKEY RKEY
                | ELSE IF LPAR exprecion RPAR LKEY instrucciones RKEY continuacion_if
                | ELSE IF LPAR exprecion RPAR LKEY RKEY continuacion_if

struct : INTERFACE ID LKEY valores RKEY

valores : ID COLON tipo SEMICOLON
        | valores ID COLON tipo SEMICOLON

llamar_funcion : ID LPAR RPAR SEMICOLON
               | ID LPAR parametros RPAR SEMICOLON

parametros : exprecion
           | parametros COMMA exprecion

ciclo_while : WHILE LPAR exprecion RPAR LKEY RKEY
            | WHILE LPAR exprecion RPAR LKEY instrucciones RKEY

funcion : FUNCTION ID LPAR RPAR LKEY RKEY
        | FUNCTION ID LPAR lista_parametros RPAR LKEY RKEY
        | FUNCTION ID LPAR RPAR LKEY instrucciones RKEY
        | FUNCTION ID LPAR lista_parametros RPAR LKEY instrucciones RKEY

lista_parametros : ID COLON tipo
                 | lista_parametros COMMA ID COLON tipo

declaracion : LET ID COLON tipo IGUAL exprecion SEMICOLON
            | LET ID IGUAL exprecion SEMICOLON


asignacion : ID IGUAL exprecion SEMICOLON

tipo : base
     | base LBRA RBRA

base : NUMBER
     | ANY
     | BOOLEAN
     | STRING
     | ID

exprecion : MENOS exprecion %prec UMINUS
          | exprecion MAS exprecion
          | exprecion MENOS exprecion
          | exprecion MULT exprecion
          | exprecion DIV exprecion
          | exprecion POTENCIA exprecion
          | exprecion MOD exprecion
          | exprecion MAQ exprecion
          | exprecion MEQ exprecion
          | exprecion MAIQ exprecion
          | exprecion MEIQ exprecion
          | exprecion NEQ exprecion
          | exprecion EQ exprecion
          | exprecion OR exprecion
          | exprecion AND exprecion
          | NOT exprecion
          | sub_exprecion

sub_exprecion : LPAR exprecion RPAR
              | NUM
              | STR
              | TRUE
              | FALSE
              | ID
              | ID LPAR RPAR
              | ID LPAR parametros RPAR
              | ID DOT ID
              | ID DOT ID LPAR RPAR
              | ID DOT ID LPAR exprecion RPAR
